[metadata]
name = nv2a_debug
version = 0.0.1
author = Erik Abair
author_email = erik.abair@bearbrains.work
description = Simulator/debugger for the Xbox nv2a vertex shader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abaire/nv2a_vsh_debug
project_urls =
    Bug Tracker = https://github.com/abaire/nv2a_vsh_debug/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: The Unlicense (Unlicense)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Assembly
    Topic :: Software Development :: Debuggers

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    nv2a-vsh >= 0.1.0
    rich
    sshkeyboard

[options.entry_points]
console_scripts =
    nv2adbg = nv2adbg:run
